--- a/Web/Web.config
+++ b/Web/Web.config
@@ -7,13 +7,15 @@
     <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     </configSections>
     <entityFramework>
         <providers>
             <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
             <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, EntityFramework6.Npgsql" />
         </providers>
+        <!--
+        <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+        -->
         <defaultConnectionFactory type="Npgsql.NpgsqlConnectionFactory, EntityFramework6.Npgsql" />
     </entityFramework>
     <system.data>
@@ -23,6 +25,9 @@
         </DbProviderFactories>
     </system.data>
     <connectionStrings>
+        <add name="abdp_Entities"
+             connectionString="Data source=5CD413422S\SQLEXPRESS;Initial Catalog=abdp_new;Persist Security Info=True;User ID=sa;Password=!@12qwaszx;multipleactiveresultsets=True;App=EntityFramework"
+             providerName="System.Data.SqlClient" />
         <add name="pdam_Entities"
              connectionString="Server=localhost;Port=5432;Database=pdam_idr;User Id=postgres;Password=postgres"
              providerName="Npgsql" />
